# python-web

./: .gitignore  diff.json  mail.py  main.py  pyproject.toml
app/: __init__.py  router.py  task.py
client/httpclient/: session_pool_request.py
common/: main.py
common/exception_x/: exception.py
common/logger/: logger.py
common/trace/: trace.py
common/worker_pool/: pool.py  t1.py
render/: json.py
router/: router.py
task/: task.py
