[project]
name = "python-web"
version = "0.1.0"
description = ""
authors = [
    {name = "matt",email = "imattdu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepdiff (>=8.6.0,<9.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
